messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
  labels:
    app: messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
      - name: messaging-app
        image: eustus265/messaging-app:latest

        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"

        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
